Package_Tools/include-C/Ubuntu_26.04/glib-2.0/glib/in_arbeit/pas/gtestutils.pas


function g_test_rand_int:Tgint32;cdecl;external libglib2;
function g_test_rand_int_range(begin:Tgint32; end:Tgint32):Tgint32;cdecl;external libglib2;
function g_test_rand_double:Tdouble;cdecl;external libglib2;
function g_test_rand_double_range(range_start:Tdouble; range_end:Tdouble):Tdouble;cdecl;external libglib2;
{
 * semi-internal API: non-documented symbols with stable ABI. You
 * should use the non-internal helper macros instead. However, for
 * compatibility reason, you may use this semi-internal API.
  }
function g_test_create_case(test_name:Pchar; data_size:Tgsize; test_data:Tgconstpointer; data_setup:TGTestFixtureFunc; data_test:TGTestFixtureFunc; 
           data_teardown:TGTestFixtureFunc):PGTestCase;cdecl;external libglib2;
function g_test_create_suite(suite_name:Pchar):PGTestSuite;cdecl;external libglib2;
function g_test_get_root:PGTestSuite;cdecl;external libglib2;
procedure g_test_suite_add(suite:PGTestSuite; test_case:PGTestCase);cdecl;external libglib2;
procedure g_test_suite_add_suite(suite:PGTestSuite; nestedsuite:PGTestSuite);cdecl;external libglib2;
function g_test_run_suite(suite:PGTestSuite):longint;cdecl;external libglib2;
procedure g_test_case_free(test_case:PGTestCase);cdecl;external libglib2;
procedure g_test_suite_free(suite:PGTestSuite);cdecl;external libglib2;
{ 0-pass, 1-fail, 2-outpattern, 4-errpattern  }
procedure g_test_trap_assertions(domain:Pchar; file:Pchar; line:longint; func:Pchar; assertion_flags:Tguint64; 
            pattern:Pchar);cdecl;external libglib2;
procedure g_assertion_message(domain:Pchar; file:Pchar; line:longint; func:Pchar; message:Pchar);cdecl;external libglib2;
procedure g_assertion_message_expr(domain:Pchar; file:Pchar; line:longint; func:Pchar; expr:Pchar);cdecl;external libglib2;
procedure g_assertion_message_cmpstr(domain:Pchar; file:Pchar; line:longint; func:Pchar; expr:Pchar; 
            arg1:Pchar; cmp:Pchar; arg2:Pchar);cdecl;external libglib2;
procedure g_assertion_message_cmpstrv(domain:Pchar; file:Pchar; line:longint; func:Pchar; expr:Pchar; 
            arg1:PPchar; arg2:PPchar; first_wrong_idx:Tgsize);cdecl;external libglib2;
procedure g_assertion_message_cmpint(domain:Pchar; file:Pchar; line:longint; func:Pchar; expr:Pchar; 
            arg1:Tguint64; cmp:Pchar; arg2:Tguint64; numtype:char);cdecl;external libglib2;
procedure g_assertion_message_cmpnum(domain:Pchar; file:Pchar; line:longint; func:Pchar; expr:Pchar; 
            arg1:Tlong_double; cmp:Pchar; arg2:Tlong_double; numtype:char);cdecl;external libglib2;
procedure g_assertion_message_error(domain:Pchar; file:Pchar; line:longint; func:Pchar; expr:Pchar; 
            error:PGError; error_domain:TGQuark; error_code:longint);cdecl;external libglib2;
procedure g_test_add_vtable(testpath:Pchar; data_size:Tgsize; test_data:Tgconstpointer; data_setup:TGTestFixtureFunc; data_test:TGTestFixtureFunc; 
            data_teardown:TGTestFixtureFunc);cdecl;external libglib2;
{ disable thorough tests  }
{ run performance tests  }
{ extra info  }
{ reduce output  }
{ run tests that are meant to assert  }
type
  PGTestConfig = ^TGTestConfig;
  TGTestConfig = record
      test_initialized : Tgboolean;
      test_quick : Tgboolean;
      test_perf : Tgboolean;
      test_verbose : Tgboolean;
      test_quiet : Tgboolean;
      test_undefined : Tgboolean;
    end;
  var
    g_test_config_vars : PGTestConfig;cvar;external libglib2;
{ internal logging API  }
type
  PGTestResult = ^TGTestResult;
  TGTestResult =  Longint;
  Const
    G_TEST_RUN_SUCCESS = 0;
    G_TEST_RUN_SKIPPED = 1;
    G_TEST_RUN_FAILURE = 2;
    G_TEST_RUN_INCOMPLETE = 3;
;
{ s:msg  }
{ s:binaryname s:seed  }
{ s:testpath  }
{ s:testpath  }
{ s:testpath  }
{ d:status d:nforks d:elapsed  }
{ s:blurb d:result  }
{ s:blurb d:result  }
{ s:blurb  }
type
  PGTestLogType = ^TGTestLogType;
  TGTestLogType =  Longint;
  Const
    G_TEST_LOG_NONE = 0;
    G_TEST_LOG_ERROR = 1;
    G_TEST_LOG_START_BINARY = 2;
    G_TEST_LOG_LIST_CASE = 3;
    G_TEST_LOG_SKIP_CASE = 4;
    G_TEST_LOG_START_CASE = 5;
    G_TEST_LOG_STOP_CASE = 6;
    G_TEST_LOG_MIN_RESULT = 7;
    G_TEST_LOG_MAX_RESULT = 8;
    G_TEST_LOG_MESSAGE = 9;
    G_TEST_LOG_START_SUITE = 10;
    G_TEST_LOG_STOP_SUITE = 11;
;
{ NULL terminated  }
type
  PGTestLogMsg = ^TGTestLogMsg;
  TGTestLogMsg = record
      log_type : TGTestLogType;
      n_strings : Tguint;
      strings : ^Pgchar;
      n_nums : Tguint;
      nums : Plong_double;
    end;
{< private > }

  PGTestLogBuffer = ^TGTestLogBuffer;
  TGTestLogBuffer = record
      data : PGString;
      msgs : PGSList;
    end;

function g_test_log_type_name(log_type:TGTestLogType):Pchar;cdecl;external libglib2;
function g_test_log_buffer_new:PGTestLogBuffer;cdecl;external libglib2;
procedure g_test_log_buffer_free(tbuffer:PGTestLogBuffer);cdecl;external libglib2;
procedure g_test_log_buffer_push(tbuffer:PGTestLogBuffer; n_bytes:Tguint; bytes:Pguint8);cdecl;external libglib2;
function g_test_log_buffer_pop(tbuffer:PGTestLogBuffer):PGTestLogMsg;cdecl;external libglib2;
procedure g_test_log_msg_free(tmsg:PGTestLogMsg);cdecl;external libglib2;
{*
 * GTestLogFatalFunc:
 * @log_domain: the log domain of the message
 * @log_level: the log level of the message (including the fatal and recursion flags)
 * @message: the message to process
 * @user_data: user data, set in g_test_log_set_fatal_handler()
 *
 * Specifies the prototype of fatal log handler functions.
 *
 * Returns: %TRUE if the program should abort, %FALSE otherwise
 *
 * Since: 2.22
  }
type

  TGTestLogFatalFunc = function (log_domain:Pgchar; log_level:TGLogLevelFlags; message:Pgchar; user_data:Tgpointer):Tgboolean;cdecl;

procedure g_test_log_set_fatal_handler(log_func:TGTestLogFatalFunc; user_data:Tgpointer);cdecl;external libglib2;
procedure g_test_expect_message(log_domain:Pgchar; log_level:TGLogLevelFlags; pattern:Pgchar);cdecl;external libglib2;
procedure g_test_assert_expected_messages_internal(domain:Pchar; file:Pchar; line:longint; func:Pchar);cdecl;external libglib2;
type
  PGTestFileType = ^TGTestFileType;
  TGTestFileType =  Longint;
  Const
    G_TEST_DIST = 0;
    G_TEST_BUILT = 1;
;

function g_test_build_filename(file_type:TGTestFileType; first_path:Pgchar; args:array of const):Pgchar;cdecl;external libglib2;
function g_test_build_filename(file_type:TGTestFileType; first_path:Pgchar):Pgchar;cdecl;external libglib2;
function g_test_get_dir(file_type:TGTestFileType):Pgchar;cdecl;external libglib2;
function g_test_get_filename(file_type:TGTestFileType; first_path:Pgchar; args:array of const):Pgchar;cdecl;external libglib2;
function g_test_get_filename(file_type:TGTestFileType; first_path:Pgchar):Pgchar;cdecl;external libglib2;
{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_assert_expected_messages : longint;

{$endif}
{ __G_TEST_UTILS_H__  }

// === Konventiert am: 22-6-26 19:40:18 ===


implementation


{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_initialized : longint;
begin
  g_test_initialized:=g_test_config_vars^.test_initialized;
end;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_quick : longint;
begin
  g_test_quick:=g_test_config_vars^.test_quick;
end;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_slow : longint;
begin
  g_test_slow:= not (g_test_config_vars^.test_quick);
end;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_thorough : longint;
begin
  g_test_thorough:= not (g_test_config_vars^.test_quick);
end;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_perf : longint;
begin
  g_test_perf:=g_test_config_vars^.test_perf;
end;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_verbose : longint;
begin
  g_test_verbose:=g_test_config_vars^.test_verbose;
end;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_quiet : longint;
begin
  g_test_quiet:=g_test_config_vars^.test_quiet;
end;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_undefined : longint;
begin
  g_test_undefined:=g_test_config_vars^.test_undefined;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function g_test_queue_unref(gobject : longint) : longint;
begin
  g_test_queue_unref:=g_test_queue_destroy(g_object_unref,gobject);
end;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_rand_bit : longint;
begin
  g_test_rand_bit:=0<>((g_test_rand_int) and (1 shl 15));
end;

{ was #define dname(params) para_def_expr }
{ return type might be wrong }   
function g_test_assert_expected_messages : longint;
begin
  g_test_assert_expected_messages:=g_test_assert_expected_messages_internal(G_LOG_DOMAIN,__FILE__,__LINE__,G_STRFUNC);
end;


end.
